platforms/infrastructure/foundation/kubernetes/manifests/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    eco-base/uri: eco-base://k8s/core/ingress/machine-native-ops-ingress
    eco-base/urn: urn:eco-base:k8s:core:ingress:machine-native-ops-ingress:sha256-ed0b81ceb00cbe21d5d0b460181ed6b617eb1080b3456dec6c9b0683ddda7173
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/app.kubernetes.io/component: ingress
    app.kubernetes.io/name: machine-native-ops
    eco-base/governance: aligned
    eco-base/part-of: eco-base
    governance.machinenativeops.io/charter-version: 2.0.0
  name: machine-native-ops-ingress
  namespace: platform-03
spec:
  ingressClassName: nginx
  rules:
  - host: machinenativeops.io
    http:
      paths:
      - backend:
          service:
            name: aep-engine-service
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: api.machinenativeops.io
    http:
      paths:
      - backend:
          service:
            name: file-organizer-service
            port:
              number: 80
        path: /file-organizer
        pathType: Prefix
      - backend:
          service:
            name: instant-service
            port:
              number: 80
        path: /instant
        pathType: Prefix
      - backend:
          service:
            name: elasticsearch-search-service
            port:
              number: 80
        path: /search
        pathType: Prefix
      - backend:
          service:
            name: esync-platform-service
            port:
              number: 80
        path: /esync
        pathType: Prefix
